--- a/app/src/main/res/layout/second_activity.xml
+++ b/app/src/main/res/layout/second_activity.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <Button
         android:id="@+id/second_start"
@@ -9,5 +11,11 @@
         android:layout_height="wrap_content"
         android:textSize="50px"
         android:text="再次启动"/>
+
+    <Button
+        android:id="@+id/third_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="启动第三个"/>
 
 </LinearLayout>
