发短信，打电话，打开相机

--- a/app4/src/main/res/layout/activity_main.xml
+++ b/app4/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
+    android:background="#B67E7E"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     tools:ignore="all">
@@ -23,6 +23,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="按钮并传递参数"/>
+
+        <Button
+            android:id="@+id/btn_sta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="打开拨号界面"/>
     </LinearLayout>
 
 
